@@ -6,6 +6,9 @@ version 1.7.9, in progress
 - Add Russian translation
 - Small GUI fixes
 - Modifications to web-downloader for new server settings
+- Fix for non-ascii filenames in session files on MS
+  Windows
+- genr: fix for unary minus in exponentiation (e.g. x^-.5)
 
 9/14/2008 version 1.7.8
 - Add a language-switching option to the gretl GUI (under
